--- a/Frontend/src/Whiselist/Whiselist.css
+++ b/Frontend/src/Whiselist/Whiselist.css
@@ -15,14 +15,16 @@ div.Wishlist_Title_Songs{
 div.Your_Whihlist_Names{
     display: flex;
     flex-wrap: wrap;
+    transition: all 0.3s ease-in-out;
 }
 @media screen and (max-width:1000px) {
   div.Your_Whihlist_Names{
     width: 80%;
     margin: auto;
+    justify-content: center;
   }
 }
-@media screen and (max-width:750px) {
+@media screen and (max-width:800px) {
   div.Your_Whihlist_Names{
     width: 90%;
     margin: auto;
@@ -295,5 +297,44 @@ button.Icon_Remove_Wish_Btn:hover #Fa_Remove_wish_btn {
     border: 1px solid var(--000);
     text-decoration: underline;
   }
-
+  div.Add_Cart_Pro_Btn{
+    margin-top: 5px;
+    margin-left: 10px;
+  }
+  button.Add_Cart_Btn_Prog{
+    justify-content: center;
+    align-items: center;
+    background-color: var(--000);
+    color: var(--fff);
+    outline: none;
+    border: none;
+    padding: 5px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+  button.Add_Cart_Btn_Prog:hover{
+    background-color: var(--fff);
+    color: var(--000);
+    transform: scale(1.2);
+    border: 1px solid var(--000);
+  }
+  #Cart-Fa_Shop{
+    margin-right: 5px;
+  }
+  button.Add_Cart_Btn_Prog:hover #Cart-Fa_Shop{
+    animation: leftBoun 1.5s linear;
+  }
+  @keyframes leftBoun {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translatex(-10px);
+    }
+    60% {
+      transform: translatex(-5px);
+    }
+  }
+  
 
