--- a/Frontend/src/Components/Home/home.css
+++ b/Frontend/src/Components/Home/home.css
@@ -273,7 +273,7 @@ div.Accordion_Content{
 div.According_Details{
   z-index: 9999999; 
   position: absolute;
-  width: 60%;
+  width: 50%;
   padding: 20px;
   background-color: var(--fff);
   border-radius: 5px;
@@ -455,6 +455,12 @@ div.Btn_Label_Cart{
   display: flex;
   align-items: center;
   margin-top: 10px;
+  justify-content: center;
+}
+@media screen  and (max-width:600px) {
+  div.Btn_Label_Cart{
+  flex-wrap: wrap;
+  }
 }
 button.Icon_heart_Label_Acc{
   padding: 8px 12px;
@@ -467,6 +473,12 @@ button.Icon_heart_Label_Acc{
    margin-right: 10px;
    transition: all 0.3s ease-in-out;
    font-size: 18px;
+}
+@media screen and (max-width:600px) {
+  button.Icon_heart_Label_Acc{
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
 }
 button.Icon_heart_Label_Acc:hover{
   color: var(--fff);
