--- a/Frontend/public/Music.css
+++ b/Frontend/public/Music.css
@@ -1,19 +1,64 @@
 .dark-side{
-  --ccb:#ccccccf3;
+  --ccb:#cccc;
 }
 body{
-    --ccb:#cccccc05;
+    --ccb:#cccc;
 }
 div.Song_Player{
-    position: fixed;
-    background-color: var(--ccb);
-    width: 100%;
-    height: auto;
-    z-index: 99999999;
-    bottom: 0;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: center;
-    box-shadow: 0 0 8px var(--box);
+  width: 100%;
+  margin: auto;
+  position: sticky;
+  bottom: 0%;
+  background-color: var(--ccb);
+  z-index: 99999999;
+  padding: 10px 20px;
+  box-shadow: 0 0 8px var(--box);
+}
+div.Song_Player{
+    width: 80%;
+    z-index: 9999999;
+    margin: auto;
+}
+div.Song_Music_Player_V{
+  display: flex;
+  align-items: center;
+}
+img.Song_Image_View{
+  width: 60px;
+  height: 50px;
+  border-radius: 5px;
+  padding: 2px;
+}
+div.No_Song_Image{
+  background-color: #7ee8fa;
+    border: 1px solid var(--ccc);
+    background-image: linear-gradient(45deg, #7ee8fa 25%, #80ff72 70%);
+    width: 60px;
+    height: 50px;
+    border-radius: 5px;
+    position: relative;
+}
+div.No_Song_Img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 2px;
+  overflow: hidden;
+}   
+p.Song_Name_Dis{
+  margin-left: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  font-family: 'Times New Roman', Times, serif;
+  text-transform: capitalize;
+}
+p.Song_Name{
+  margin-left: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  font-family: 'Times New Roman', Times, serif;
+  text-transform: capitalize;
 }
 
